--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "serverless-ini-env",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test",
+    "lint": "eslint src/**/*.js test/**/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.3",
     "ini": "^1.3.5"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-nelson": "^0.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3"
   }
 }
