--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-ini-env",
-  "version": "1.0.13",
+  "version": "1.1.0-alpha",
   "description": "Nice serverless plugin to setup environment variables with ini file",
   "main": "src/index.js",
   "bugs": {
@@ -29,7 +29,8 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.3",
-    "ini": "^1.3.5"
+    "ini": "^1.3.5",
+    "lodash.isobject": "^3.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
