--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-ini-env",
-  "version": "1.2.1-alpha",
+  "version": "1.3.0",
   "description": "Nice serverless plugin to setup environment variables with ini file",
   "main": "src/index.js",
   "bugs": {
